--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -3,7 +3,11 @@ FROM php:8.3-fpm
 RUN apt-get update && apt-get install -y \
     netcat-openbsd \
     zip unzip curl git libpng-dev libonig-dev libxml2-dev libzip-dev libpq-dev \
-    && docker-php-ext-install pdo pdo_pgsql mbstring xml zip exif pcntl bcmath gd
+    && docker-php-ext-install pdo pdo_pgsql mbstring xml zip exif pcntl bcmath gd \
+    && pecl install xdebug \
+    && docker-php-ext-enable xdebug \
+    && echo "xdebug.mode=coverage" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+    && echo "xdebug.start_with_request=no" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
 WORKDIR /var/www/html
 
